[package]
name = "asteroids-bevy"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy = { version = "0.10" }
bevy_vector_shapes = "0.4.3"
